--- a/example/index.html
+++ b/example/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>stylep-name/example</title>
+        <title>stylep-modal/example</title>
         <link rel="stylesheet" href="build/index.css">
 </head>
 <body>
-        <h1>stylep-name/example</h1>
+        <h1>stylep-modal/example</h1>
 
         <h2>Patterns</h2>
 
