Added example cases

--- a/example/index.html
+++ b/example/index.html
@@ -10,16 +10,42 @@
 
         <h2>Patterns</h2>
 
-        <h3>Name</h3>
+        <h3>Inline Modal</h3>
         <section>
-                <!-- ... -->
+                <div class="modal--inline is-active">.modal--inline</div>
+        </section>
+
+        <h3>Block Modal</h3>
+        <section>
+                <div class="modal--block is-active">.modal--block</div>
         </section>
 
         <h2>Styles</h2>
 
-        <h3>Name</h3>
+        <h3>Solid Modal with Title</h3>
         <section>
-                <!-- ... -->
+                <div class="modal--solid modal--inline is-active">
+                        <div class="modal--title">.modal--title</div>
+                        .modal--solid.modal--inline
+                </div>
+
+                <div class="modal--solid modal--block is-active">
+                        <div class="modal--title">.modal--title</div>
+                        .modal--solid.modal--block
+                </div>
+        </section>
+
+        <h3>Hollow Modal with Title</h3>
+        <section>
+                <div class="modal--hollow modal--inline is-active">
+                        <div class="modal--title">.modal--title</div>
+                        .modal--hollow.modal--inline
+                </div>
+
+                <div class="modal--hollow modal--block is-active">
+                        <div class="modal--title">.modal--title</div>
+                        .modal--hollow.modal--block
+                </div>
         </section>
 
 </body>
