--- a/example/index.html
+++ b/example/index.html
@@ -25,12 +25,12 @@
         <h3>Solid Modal with Title</h3>
         <section>
                 <div class="modal--solid modal--inline is-active">
-                        <div class="modal--title">.modal--title</div>
+                        <div class="modal--title">.modal--title <i>&#10005;</i></div>
                         .modal--solid.modal--inline
                 </div>
 
                 <div class="modal--solid modal--block is-active">
-                        <div class="modal--title">.modal--title</div>
+                        <div class="modal--title">.modal--title <i>&#10005;</i></div>
                         .modal--solid.modal--block
                 </div>
         </section>
@@ -38,12 +38,12 @@
         <h3>Hollow Modal with Title</h3>
         <section>
                 <div class="modal--hollow modal--inline is-active">
-                        <div class="modal--title">.modal--title</div>
+                        <div class="modal--title">.modal--title <i>&#10005;</i></div>
                         .modal--hollow.modal--inline
                 </div>
 
                 <div class="modal--hollow modal--block is-active">
-                        <div class="modal--title">.modal--title</div>
+                        <div class="modal--title">.modal--title <i>&#10005;</i></div>
                         .modal--hollow.modal--block
                 </div>
         </section>
